@@ -11,7 +11,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclCompile.c,v 1.58 2004/01/20 15:39:56 dkf Exp $
+ * RCS: @(#) $Id: tclCompile.c,v 1.59 2004/03/29 02:09:46 msofer Exp $
  */
 
 #include "tclInt.h"
@@ -1053,7 +1053,8 @@ TclCompileScript(interp, script, numBytes, envPtr)
 			        && !(cmdPtr->flags & CMD_HAS_EXEC_TRACES)
 			        && !(iPtr->flags & DONT_COMPILE_CMDS_INLINE)) {
 			    int savedNumCmds = envPtr->numCommands;
-			    unsigned char *savedCodeNext = envPtr->codeNext;
+			    unsigned int savedCodeNext =
+				    envPtr->codeNext - envPtr->codeStart;
 
 			    code = (*(cmdPtr->compileProc))(interp, &parse,
 			            envPtr);
@@ -1066,7 +1067,7 @@ TclCompileScript(interp, script, numBytes, envPtr)
 				 * TCL_OUT_LINE_COMPILE [Bugs 705406 and 735055]
 				 */
 				envPtr->numCommands = savedNumCmds;
-				envPtr->codeNext = savedCodeNext;
+				envPtr->codeNext = envPtr->codeStart + savedCodeNext;
 			    } else { /* an error */
 				/*
 				 * There was a compilation error, the last
