@@ -1,3 +1,9 @@
+2004-03-28  Miguel Sofer <msofer@users.sf.net>
+
+	* generic/tclCompile.c (TclCompileScript): corrected possible
+	segfault when a compilation returns TCL_OUTLINE_COMPILE after
+	having grown the compile environment.
+
 2004-03-27  Miguel Sofer <msofer@users.sf.net>
 
 	* doc/array.n: added documentation for trace-realted behaviour of
